<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.baobang.threebird.view.activity.LoginActivity"
    android:background="@drawable/background_color_gradient"
    android:id="@+id/layoutRoot">

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           tools:ignore="UselessParent">
           <LinearLayout
               android:id="@+id/email_login_form"
               android:layout_width="match_parent"
               android:layout_height="400dp"
               android:orientation="vertical"
               android:background="@drawable/background_trans_border_white"
               android:layout_margin="@dimen/margin"
               android:layout_gravity="center"
               >

               <ImageView
                   android:id="@+id/imgLogo"
                   android:src="@drawable/bird_new"
                   android:layout_width="match_parent"
                   android:layout_height="100dp"
                   android:contentDescription="@string/logo_decreption"
                   />

               <EditText
                   android:id="@+id/txtUserName"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/user_name"
                   android:drawableStart="@drawable/ic_username"
                   android:drawablePadding="@dimen/padding"
                   android:maxLines="1"
                   android:ems="10"
                   android:padding="@dimen/padding"
                   android:layout_margin="@dimen/padding"
                   android:background="@drawable/edittext_background"/>
               <EditText
                   android:id="@+id/txtPassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:drawableStart="@drawable/ic_password"
                   android:drawablePadding="@dimen/padding"
                   android:inputType="textPassword"
                   android:ems="10"
                   android:hint="@string/password"
                   android:maxLines="1"
                   android:padding="@dimen/padding"
                   android:layout_marginLeft="@dimen/padding"
                   android:layout_marginRight="@dimen/padding"
                   android:layout_marginBottom="@dimen/padding"
                   android:background="@drawable/edittext_background"/>

               <Button
                   android:id="@+id/btnLogin"
                   android:layout_width="200dp"
                   android:layout_height="wrap_content"
                   android:text="@string/action_sign_in"
                   android:layout_gravity="center"
                   android:textColor="@color/color_white"
                   android:padding="@dimen/padding"
                   android:layout_margin="@dimen/margin_vertical"
                   android:background="@drawable/button_background"
                   android:textAlignment="center"
                   />
               <TextView
                   android:id="@+id/txtForgetPassword"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/forget_password"
                   android:layout_gravity="center"
                   android:layout_margin="@dimen/margin_vertical"
                   android:textSize="@dimen/text_size"
                   />
               <TextView
                   android:id="@+id/txtSigniIn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/resgiter"
                   android:layout_gravity="center"
                   android:layout_margin="@dimen/margin_vertical"
                   android:textSize="@dimen/text_size"
                   />


           </LinearLayout>
       </ScrollView>
</RelativeLayout>
