<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_gradient"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="@dimen/padding"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:ems="10"
                android:maxLines="1"
                android:padding="@dimen/padding"
                />
            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="@dimen/padding"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/margin_vertical"
                android:ems="10"
                android:maxLines="1"
                android:padding="@dimen/padding"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                />
            <EditText
                android:id="@+id/txtPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="@dimen/padding"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/margin_vertical"
                android:ems="10"
                android:maxLines="1"
                android:padding="@dimen/padding"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                />

            <Button
                android:id="@+id/btnSignUp"
                android:text="@string/resgiter"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/color_white"
                />

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
