<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_white_90">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBarAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_back_list">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_product"
            android:textSize="@dimen/text_size_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:layout_gravity="center"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/layoutImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin_vertical"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@drawable/button_background_white"
                    android:padding="@dimen/padding"
                    android:src="@drawable/ic_image_add" />

                <ImageView
                    android:id="@+id/btnPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    android:layout_marginRight="@dimen/margin_vertical"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@drawable/button_background_white"
                    android:padding="@dimen/padding"
                    android:src="@drawable/ic_image_add_2" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_color_gradient"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/product_name"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/txtProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/product_category"
                android:textSize="@dimen/text_size" />

            <Spinner
                android:id="@+id/spProductCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size" ></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/product_brand"
                android:textSize="@dimen/text_size" />

            <Spinner
                android:id="@+id/spProductBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp" ></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/product_id"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/txtProductId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/product_inventory"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/txtProductInventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:ems="10"
                android:maxLines="1"
                android:inputType="numberDecimal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/product_inventory_price"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/txtProductPriceInventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:ems="10"
                android:maxLines="1"
                android:inputType="numberDecimal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/product_price"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/txtProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:ems="10"
                android:maxLines="1"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/txtDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="100dp"
                android:textSize="@dimen/text_size"
                android:inputType="textMultiLine"
                android:background="@drawable/edittext_background_border_green"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
