<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baobang.threebird.activity.UserDetailsActivity"
    android:orientation="vertical"
    android:background="@drawable/background_color_gradient">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBarUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:background="@color/colorPrimary"
        app:title=""
        app:titleTextColor="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_back_list">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_user_detail"
            android:textSize="@dimen/text_size_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:layout_gravity="left"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:background="@color/color_white_90"
        >

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/user"
            />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white_90">

                <TextView
                    android:padding="@dimen/padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/user_info"
                    android:textSize="@dimen/text_size_title"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:paddingRight="@dimen/margin">
                    <ImageButton
                        android:id="@+id/btnUserInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_down_arrow"
                        android:layout_gravity="center_vertical"
                        android:background="#00ffffff"
                        />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/groupUserInfo"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding">

                    <EditText
                        android:id="@+id/txtName"
                        android:hint="@string/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:padding="@dimen/padding"
                        android:background="@color/color_white"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/padding">
                    <Spinner
                        android:id="@+id/spGroupClient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>
                <LinearLayout

                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding">

                    <EditText
                        android:id="@+id/txtPhone"
                        android:hint="@string/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:padding="@dimen/padding"
                        android:background="@color/color_white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding">

                    <EditText
                        android:id="@+id/txtFax"
                        android:hint="@string/fax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:padding="@dimen/padding"
                        android:background="@color/color_white"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding">

                    <EditText
                        android:id="@+id/txtWebsite"
                        android:hint="@string/website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:padding="@dimen/padding"
                        android:background="@color/color_white"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding">

                    <EditText
                        android:id="@+id/txtEmail"
                        android:hint="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:padding="@dimen/padding"
                        android:background="@color/color_white"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white_90"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/address_info"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_title" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:paddingRight="@dimen/margin">
                    <ImageButton
                        android:id="@+id/btnAddressInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="#00ffffff"
                        android:src="@drawable/ic_down_arrow"/>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/groupAddressInfo"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/padding">

                    <Spinner
                        android:id="@+id/spProvince"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/padding">

                    <Spinner
                        android:id="@+id/spDistrict"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/padding">

                    <Spinner
                        android:id="@+id/spCommune"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding"
                    android:paddingBottom="@dimen/padding">

                    <EditText
                        android:id="@+id/txtAddress"
                        android:hint="@string/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:padding="@dimen/padding"
                        android:background="@color/color_white"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
